Break scripts out into separate modules Add tests Remove database-related scripts Use webpack for distribution

--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "sync-sql": "^1.0.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.8.0",
+    "jest": "^22.2.1",
+    "webpack": "^3.10.0"
   },
   "scripts": {
-    "test": "eslint *.js"
+    "test": "jest && eslint *.js",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -29,5 +35,10 @@
   "bugs": {
     "url": "https://github.com/khalisfoundation/anvaad-js/issues"
   },
-  "homepage": "https://github.com/khalisfoundation/anvaad-js#readme"
+  "homepage": "https://github.com/khalisfoundation/anvaad-js#readme",
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  }
 }
