Clean up translit TODO: fix failing translit test Update test descriptions and JSDocs Remove locutus dependency

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utilities to prime Gurmukhi script for search. Unicode, first letters, main letters",
   "main": "index.js",
   "dependencies": {
-    "locutus": "^2.0.9",
+    "lodash.unescape": "^4.0.1",
     "sync-sql": "^1.0.2"
   },
   "devDependencies": {
