--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "anvaad-js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utilities to prime Gurmukhi script for search. Unicode, first letters, main letters",
   "main": "index.js",
   "dependencies": {
     "lodash.unescape": "^4.0.1",
-    "sync-sql": "^1.0.2"
+    "string.prototype.padstart": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
