--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "anvaad-js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utilities to prime Gurmukhi script for search. Unicode, first letters, main letters",
   "main": "index.js",
   "dependencies": {
     "lodash.unescape": "^4.0.1",
-    "sync-sql": "^1.0.2"
+    "string.prototype.padstart": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -15,10 +15,13 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "jest": "^22.2.1",
+    "npm-run-all": "^4.1.2",
     "webpack": "^3.10.0"
   },
   "scripts": {
-    "test": "jest && eslint *.js",
+    "test": "npm-run-all -p -c test:*",
+    "test:unit": "jest",
+    "test:lint": "eslint *.js",
     "build": "webpack -p"
   },
   "repository": {
@@ -31,7 +34,7 @@
     "unicode"
   ],
   "author": "Khalis, Inc. <techsupport@khalisfoundation.org>",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
     "url": "https://github.com/khalisfoundation/anvaad-js/issues"
   },
@@ -40,5 +43,12 @@
     "presets": [
       "env"
     ]
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "env": {
+      "jest": true,
+      "node": true
+    }
   }
 }
