--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: node_js
 "node_js":
   - "8"
+
+cache:
+  directories:
+    - node_modules
+
+script:
+  - yarn lint
+  - yarn coverage
+
+after_success:
+  - yarn add coveralls
+  - cat ./coverage/lcov.info | coveralls
