--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "anvaad-js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Utilities to prime Gurmukhi script for search. Unicode, first letters, main letters",
-  "main": "index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "lodash.unescape": "^4.0.1",
     "string.prototype.padstart": "^3.0.0"
