--- a/package.json
+++ b/package.json
@@ -1,54 +1,42 @@
 {
-  "name": "anvaad-js",
-  "version": "1.0.4",
-  "description": "Utilities to prime Gurmukhi script for search. Unicode, first letters, main letters",
-  "main": "dist/index.js",
+  "name": "website",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve --open",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
   "dependencies": {
-    "lodash.unescape": "^4.0.1",
-    "string.prototype.padstart": "^3.0.0"
+    "anvaad-js": "^1.0.3",
+    "vue": "^2.5.16"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "jest": "^22.3.0",
-    "npm-run-all": "^4.1.2",
-    "webpack": "^3.10.0"
+    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
+    "@vue/cli-service": "^3.0.0-beta.9",
+    "vue-template-compiler": "^2.5.13"
   },
-  "scripts": {
-    "test": "jest && yarn lint",
-    "lint": "eslint .",
-    "coverage": "jest --coverage",
-    "build": "webpack -p"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/khalisfoundation/anvaad-js.git"
-  },
-  "keywords": [
-    "gurmukhi",
-    "gurbani",
-    "unicode"
-  ],
-  "author": "Khalis, Inc. <techsupport@khalisfoundation.org>",
-  "license": "SEE LICENSE IN LICENSE.md",
-  "bugs": {
-    "url": "https://github.com/khalisfoundation/anvaad-js/issues"
-  },
-  "homepage": "https://github.com/khalisfoundation/anvaad-js#readme",
   "babel": {
     "presets": [
-      "env"
+      "@vue/app"
     ]
   },
   "eslintConfig": {
-    "extends": "airbnb-base",
-    "env": {
-      "jest": true,
-      "node": true
+    "root": true,
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ]
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
     }
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
