--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "pre-push": "echo \"Building website!\" && npm run build",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build && rm -rf css img js && mv dist/* ./",
     "lint": "vue-cli-service lint"
@@ -15,6 +16,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.9",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
     "@vue/cli-service": "^3.0.0-beta.9",
+    "pre-push": "^0.1.1",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
