--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "pre-push": "echo \"Building website!\" && npm run build",
+    "pre-push":
+      "echo \"Building website!\" && npm run build && git add . -A && git commit --amend --no-edit",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build && rm -rf css img js && mv dist/* ./",
     "lint": "vue-cli-service lint"
