--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anvaad-js",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Utilities to prime Gurmukhi script for search. Unicode, first letters, main letters",
   "main": "dist/index.js",
   "dependencies": {
@@ -22,7 +22,8 @@
     "test": "jest && yarn lint",
     "lint": "eslint .",
     "coverage": "jest --coverage",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
