Fixes conflict in merge request #31 (#33)
* English updates (#30)

* Added rules for english cleanup, remove extra vowels in specific words
guramukh, gurabani, guradhev, gurasikh, manamukh

* words that start with ooRa like updesh should be updesh not aupdesh

* [WIP] Hindi Translit (#19)

* Initial Commit

* Add better support

* register hindi in translit.js

* Add some more fixes to hindi

* rename to devnagri

* updated to add all characters required

Some still need devnagri equivalent

* Update devnagri.js

* Update devnagri.js

* Update devnagri.js

* Update tests

* remove prettier

* ignore broken tests

* Update LICENSE.md (#32)

* Update package.json

* Adds more tests for translit function; corrects output in comments of code

* Removes changes from .eslintignore and .gitignore

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "unicode"
   ],
   "author": "Khalis, Inc. <techsupport@khalisfoundation.org>",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/khalisfoundation/anvaad-js/issues"
   },
@@ -50,5 +50,8 @@
       "jest": true,
       "node": true
     }
+  },
+  "jest": {
+    "testURL": "http://localhost"
   }
 }
