--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,14 @@
+.vscode
 coverage
 src
-webpack.config.js
-yarn.lock
-.vscode
+.babelrc
 .editorconfig
 .eslintignore
+.eslintrc
+.gitignore
+.npmignore
+.prettierignore
+.prettierrc
 .travis.yml
+webpack.config.js
+yarn.lock
