--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
     "jest": "^22.3.0",
     "npm-run-all": "^4.1.2",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
     "webpack": "^3.10.0"
   },
   "scripts": {
-    "test": "jest && yarn lint",
+    "test": "jest && npm run lint",
     "lint": "eslint .",
     "coverage": "jest --coverage",
     "build": "webpack -p",
@@ -40,19 +45,13 @@
     "url": "https://github.com/khalisfoundation/anvaad-js/issues"
   },
   "homepage": "https://github.com/khalisfoundation/anvaad-js#readme",
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "airbnb-base",
-    "env": {
-      "jest": true,
-      "node": true
-    }
-  },
   "jest": {
     "testURL": "http://localhost"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "pre-push": "npm test"
+    }
   }
 }
