(feat): initial declaration file

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "string.prototype.padstart": "^3.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.9",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
