--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "lodash.unescape": "^4.0.1",
-    "string.prototype.padstart": "^3.0.0"
+    "string.prototype.padstart": "^3.1.6"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "jest": "^22.3.0",
-    "npm-run-all": "^4.1.2",
-    "webpack": "^3.10.0"
+    "@babel/preset-env": "^7.25.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.3",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^9.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.93.0"
   },
   "scripts": {
     "test": "jest && yarn lint",
@@ -43,7 +44,9 @@
   "homepage": "https://github.com/khalisfoundation/anvaad-js#readme",
   "babel": {
     "presets": [
-      "env"
+      [
+        "@babel/preset-env"
+      ]
     ]
   },
   "eslintConfig": {
@@ -54,6 +57,8 @@
     }
   },
   "jest": {
-    "testURL": "http://localhost"
+    "testEnvironmentOptions": {
+      "url": "http://localhost"
+    }
   }
 }
