--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "webpack": "^5.93.0"
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "test": "jest && yarn lint",
     "lint": "eslint .",
     "coverage": "jest --coverage",
-    "build": "webpack -p && mv src/index.d.ts dist/index.d.ts",
+    "build": "webpack --mode production && cp src/index.d.ts dist/index.d.ts",
     "prepublishOnly": "npm run build"
   },
   "repository": {
